--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="src/css/main.css">
+<link rel="stylesheet" href="css/main.css">
 </head>
 <body class="container">
 <div class="row row-centered">
@@ -10,13 +10,13 @@
 </div>
 <section id="app">
 </section>
-    <script src="src/vendor.js"></script>
+    <script src="vendor/vendor.js"></script>
   	<script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
-    <script src="src/todoInput.js"></script>
-    <script src="src/todo.js"></script>
-    <script src="src/todoList.js"></script>
-    <script src="src/app.js"></script>
-    <script src="src/main.js"></script>
+    <script src="components/todoInput.js"></script>
+    <script src="components/todo.js"></script>
+    <script src="components/todoList.js"></script>
+    <script src="components/app.js"></script>
+    <script src="components/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
